--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Notes">
-        <activity android:name=".editor.EditorActivity" />
+        <activity
+            android:name=".editor.EditorActivity"
+            android:theme="@style/Theme.Notes.NoActionBar"
+            />
         <activity
             android:name=".main.MainActivity"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Notes.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
