--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
             />
         <activity
             android:name=".main.MainActivity"
-            android:theme="@style/Theme.Notes.NoActionBar">
+            android:theme="@style/Theme.Notes.NoActionBar"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
