--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,10 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
+    id 'org.jetbrains.kotlin.plugin.serialization'
 }
+
+apply plugin: 'kotlinx-serialization'
 
 android {
     compileSdkVersion 32
@@ -77,4 +80,6 @@ dependencies {
     // To use constraintlayout in compose
     implementation "androidx.constraintlayout:constraintlayout:2.1.2"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc02"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
 }
