--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,10 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+    id 'kotlinx-serialization'
     id 'org.jetbrains.kotlin.plugin.serialization'
 }
-
-apply plugin: 'kotlinx-serialization'
 
 android {
     compileSdkVersion 32
